--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ location: Copenhagen, Denmark
 
 
 # ABOUT --------------------------------------------------
-about: I am a software and computer engineer from Denmark with a background in electrical engineering and the creative media industry. 
+about: I am a software engineer from Denmark with a background in electrical engineering and the creative media industry. 
   In my spare time I enjoy playing volleyball, doing fun projects with my friends and occasionally making videos for my YouTube channel or Instagram page.
 
 
