new hero background

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ menu:
 
 # HERO SECTION --------------------------------------------
 hero:
-  hero-bg: assets/images/backgrounds/abstract2.jpeg
+  hero-bg: assets/images/backgrounds/sunset.jpg
 
 
 # SOCIAL -------------------------------------------------
